@@ -3,6 +3,6 @@ AUX emacs-22.2-sh.patch 761 RMD160 4a65a87cfd31d0714e9f99de91dee1c292ba5159 SHA1
 AUX emacs-22.3-freebsd-sparc.patch 488 RMD160 37a5499a515a45e19858b6aaa1217ec116811d2d SHA1 47d2880c01857515d38adc9a56485e9bd695cac6 SHA256 963ea3506cbcf4797ec974e2802a11c6e9c09cddf1360dbbe6a452a2cef6efbf
 AUX emacs-22.3-linux-random-heap.patch 566 RMD160 6d0df837e04ba6cd712939092626cc067248cae5 SHA1 0313a5b34bb5b868596408af9b71b18c28b227c4 SHA256 76d049df10d1a4789a45297d8a14b2e7b41e700aefd0aec66ab47fbdfe0c0fbd
 DIST emacs-22.3.tar.gz 39587396 RMD160 a7eed5099d0cab25f34152f1b18b5c1b4e2e0746 SHA1 5e9b3e0205099a83be7198fd43ba1c9442a3feb0 SHA256 7bd9b719db8ee20c75ee0d256737f7fd2c0e2ea30a285a3afbfc32c856420d16
-EBUILD emacs-22.3-r1.ebuild 8044 RMD160 ecac91cfc0a9e5637a9a0fafa7d3cd6a21c1c0d9 SHA1 edca2cfeb08d880295ff49c6d5cda172b97367e7 SHA256 b9cc34000a4bd70d23762e29fe5389c79ac642e20c07b6ccaad4ccb4d668a17c
-MISC ChangeLog 743 RMD160 ca6b89a8b69bd1b2444e5efba712e6a8650538f9 SHA1 0942341410db3926d2b93cdd1d1a9d66e7c810dd SHA256 7b6cf399f9a14da9364eb6e44555ef68690713a0ed292edef3cc067746486e57
+EBUILD emacs-22.3-r1.ebuild 7947 RMD160 73e08434a1418c3592f9c06111595e40596232bf SHA1 41fc3ac38bad272723e67c616326d7b87c5406cd SHA256 ac31c5896f7f6ce29ceea8b8c6cd57d191c39c1eb920133e7d136129de0ad22a
+MISC ChangeLog 902 RMD160 8fdbbcb0a0ae985f5f0f382339b0e19b61b8c5c8 SHA1 a4ceb7154860422be88988e2cb1ffeb623196d70 SHA256 cc12b2c7c7070d06974acd3ece710977b79859ace242bb2cb926b612105f928a
 MISC metadata.xml 1529 RMD160 e40abfeff829d64e9f7d699d4e8fc5c4d6097bb5 SHA1 b2c01905cf0230739a45ad86bfbec800f8562c9f SHA256 b24dbef03ac32c182f69573275d416d664537eee2667e1e8c3199d4d34f3b20e
