@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Feb 2009; Christian Faulhammer <fauli@gentoo.org> emacs-22.3-r1.ebuild:
+  Prefer aspell over ispell (sync with tree); change copyright date and
+  header
+
   23 Jan 2009; Ulrich Mueller <ulm@gentoo.org> -emacs-18.59-r5.ebuild:
   Moved to Portage tree.
 
